[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tp1_ex9"
version = "0.1.0"
description = "Un paquete de calculadora con funciones complejas"
authors = [
    { name = "Alvarez Bianco Luciano", email = "lucagustinalvarez1997@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Agus-Alvarez/tp1_ex9"
"Bug Tracker" = "https://github.com/Agus-Alvarez/tp1_ex9/issues"

# Agregamos esta sección para especificar los paquetes a incluir
[tool.hatch.build.targets.wheel]
packages = ["calculator"]